test_regress/t/t_property_sexpr_unsup.out
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:36:41: Unsupported: Implication with sequence expression
   36 |   assert property (@(posedge clk) ##1 1 |-> 1) $display("[%0t] single delay with const implication stmt, fileline:%d", $time, 36);
      |                                         ^~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:38:41: Unsupported: Implication with sequence expression
   38 |   assert property (@(posedge clk) ##1 1 |-> not (val)) $display("[%0t] single delay implication with negated var stmt, fileline:%d", $time, 38);
      |                                         ^~~
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:40:37: Unsupported: Implication with sequence expression
   40 |   assert property (@(posedge clk) 1 |-> ##1 val) $display("[%0t] single delay implication with negated var stmt, fileline:%d", $time, 40);
      |                                     ^~~
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:42:45: Unsupported: Implication with sequence expression
   42 |   assert property (@(posedge clk) (##1 val) |-> (not val)) $display("[%0t] single delay with negated implication stmt, fileline:%d", $time, 42);
      |                                             ^~~
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:44:45: Unsupported: Implication with sequence expression
   44 |   assert property (@(posedge clk) ##1 (val) |-> not (val)) $display("[%0t] single delay with negated implication brackets stmt, fileline:%d", $time, 44);
      |                                             ^~~
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:48:41: Unsupported: Implication with sequence expression
   48 |   assert property (@(posedge clk) ##1 1 |-> 0) $display("[%0t] disable iff with cond implication stmt, fileline:%d", $time, 48);
      |                                         ^~~
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:50:45: Unsupported: Implication with sequence expression
   50 |   assert property (@(posedge clk) (##1 val) |-> (##1 val)) $display("[%0t] two delays implication stmt, fileline:%d", $time, 50);
      |                                             ^~~
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:52:52: Unsupported: Disable iff with sequence expression
                                                    : ... note: In instance 't'
   52 |   assert property (@(posedge clk) disable iff (cyc != 5) ##1 0) $display("[%0t] disable iff stmt, fileline:%d", $time, 52);
      |                                                    ^~
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:54:52: Unsupported: Disable iff with sequence expression
                                                    : ... note: In instance 't'
   54 |   assume property (@(posedge clk) disable iff (cyc != 5) ##1 0) $display("[%0t] disable iff stmt, fileline:%d", $time, 54);
      |                                                    ^~
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:56:51: Unsupported: Disable iff with sequence expression
                                                    : ... note: In instance 't'
   56 |   cover property (@(posedge clk) disable iff (cyc != 5) ##1 0) $display("[%0t] disable iff stmt, fileline:%d", $time, 56);
      |                                                   ^~
%Error: Exiting due to
